--- a/vignettes/tutorial.Rmd
+++ b/vignettes/tutorial.Rmd
@@ -183,11 +183,9 @@ s@propositions
 
 The `Configs` S4 class contains the practical MCMC configuration parameters, such as the number of Monte Carlo iterations and the length of burnin, and important details about model specification. All of them have default settings, so just for the sake of trying out the package, you should be able to get away with calling the `Configs` function with no arguments. For a full list of slots and their explanations, type `help("Configs-class")`.
 
-However, for serious analyses, pay particular attention to the `Configs` slots that apply constraints on model parameters. The `parameter_sets_update` controls which sets of parameters to update during the MCMC. All other parameters are fixed at constant values. Similarly, the `effects_update_beta` and `effects_update_theta` slots store the values of $\ell$ for which the $\beta_{\ell, g}$'s and $\theta_\ell$'s are updated. The `constrain_thetas` slot is a logical value. If it is set to `TRUE`, then `effects_update_theta` will be overwritten in the construction of the `Chain` object later. The new `effects_update_theta` will indicate the rows of $(X^T X)^{-1} X^T$ that do not sum to zero.
+However, for serious analyses, you may want to adjust the `iterations`, `burnin`, and `thin` slots to control the duration of the MCMC. `burinin` is the number of throwaway iterations at the beginning of the MCMC, `iterations` is the number of iterations for which parameter samples are actually used, and `thin` is the number of iterations to throw away between each actually-used iteration. You may also want to adjust the `Configs` slots that apply constraints on model parameters. The `parameter_sets_update` controls which sets of parameters to update during the MCMC. All other parameters are fixed at constant values. 
 
 The `diag` slot is also worth noting. If `diag` is set to `"gelman"`, Gelman-Rubin potential scale reduction factors will be used to assess convergence and then stored in the `psrf` slot of the subsequent `Chain`. For any other value, no such convergence diagnostic will be used. Similarly, the `ess` slot is important. If greater than 0, the program will make sure that an effective sample size of at least `ess` is reached for all returned parameters. Otherwise, no such checks will occur. The `max_attempts` slot controls the number of retries to meet these convergence diagnostics. It can be set to `Inf`, but this is not recommended because saved `Chain` objects can be restarted from where they left off with a single line of code.
-
-Finally, the `iterations`, `burnin`, and `thin` slots control the duration of the chain. `burinin` is the number of throwaway iterations at the beginning of the MCMC, `iterations` is the number of iterations for which parameter samples are actually used, and `thin` is the number of iterations to throw away between each actually-used iteration.
 
 
 ## (Optional) create a `Starts` object.
